--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -17,3 +19,5 @@
 .env.production.local
 
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
