--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Felixho19.github.io/my-app",
+  "homepage": "https://Felixho19.github.io/myProfile",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
