--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "homepage": "https://Felixho19.github.io/myProfile",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "fontawesome": "^5.6.3",
     "gh-pages": "^2.0.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
