--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "bootstrap": "^4.3.1",
     "fontawesome": "^5.6.3",
     "gh-pages": "^2.0.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
+    "konva": "^7.1.3",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "3.0.1",
+    "react-konva": "^16.13.0-6",
+    "react-scripts": "^3.4.3",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
