--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://Felixho19.github.io/myProfile",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@octokit/core": "^3.4.0",
     "bootstrap": "^4.3.1",
     "fontawesome": "^5.6.3",
     "gh-pages": "^2.0.1",
