--- a/nginx.conf
+++ b/nginx.conf
@@ -37,12 +37,14 @@ http {
         
         ssl_certificate /etc/nginx/ssl/server.crt;
         ssl_certificate_key /etc/nginx/ssl/server.key;
-        ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
-        ssl_protocols TLSv1.1 TLSv1.2;
          
-        location / {
+        location /myProfile {
             # $$ in front of uri to prevent $uri from getting replaced with a blank value.
-            try_files $$uri /index.html;
+            if (!-e $request_filename){
+                rewrite ^(.*)$ /myProfile/index.html break;
+            }
+            root  /app/myProfile/root;
+            index index.html;
         }
     }
 }
