--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@octokit/core": "^3.4.0",
     "bootstrap": "^4.3.1",
+    "browserslist": "^4.16.6",
     "fontawesome": "^5.6.3",
     "gh-pages": "^2.0.1",
+    "glob-parent": "^6.0.0",
+    "is-svg": "^4.3.1",
     "jquery": "^3.5.1",
     "konva": "^7.1.3",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "react": "^16.8.6",
+    "postcss": "^8.3.5",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.2",
     "react-fontawesome": "^1.6.1",
     "react-konva": "^16.13.0-6",
     "react-scripts": "^4.0.3",
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.0.0"
   }
 }
